crates/toml_edit/tests/fixtures/invalid/inline-table-newline.stderr
TOML parse error at line 7, column 11
  |
7 | native = {
  |           ^
Unexpected `
`
Expected key
